tests/rustdoc-ui/diagnostic-width.stderr
error: this URL is not a hyperlink
  --> $DIR/diagnostic-width.rs:4:41
   |
LL | ... a http://link.com
   |       ^^^^^^^^^^^^^^^ help: use an automatic link instead: `<http://link.com>`
   |
   = note: bare URLs are not automatically turned into clickable links
note: the lint level is defined here
  --> $DIR/diagnostic-width.rs:2:9
   |
LL | ...ny(rustdoc::bare_url...
   |       ^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

